--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,7 @@
-@import url("sections/header.css")
+@import url("sections/header.css");
+    
+*{
+    margin:0;
+padding:0;
+box-sizing: border-box;
+}
