--- a/css/sections/header.css
+++ b/css/sections/header.css
@@ -3,7 +3,12 @@
     padding:0;
     box-sizing: border-box;
 }
+/* nav */
 nav{
     background-color: #f4f7fb;
     height:10vh;
+ }
+ nav ul li{
+    list-style-type: none;
+    
 }
