added added .nav__center

--- a/css/sections/header.css
+++ b/css/sections/header.css
@@ -6,9 +6,30 @@
 /* nav */
 nav{
     background-color: #f4f7fb;
-    height:10vh;
- }
- nav ul li{
-    list-style-type: none;
     
+    /* margin: 2em; */
+ }
+ .nav__container{
+    display: flex;
+    justify-content: space-around; 
+    align-items: center;
+ }
+ .nav__center ul{
+    display: flex;
+    gap: 3em;
+ }
+ .nav__center ul li{
+    list-style-type: none; 
+    font-size: 1.5rem;
 }
+
+.nav__center ul li a{
+    text-decoration: none;
+    color: black;
+
+}
+.nav__right{
+    display: flex;
+    gap:2em;
+}
+
