--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,11 @@
 @import url("sections/header.css");
-    
-*{
-    margin:0;
-padding:0;
-box-sizing: border-box;
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.container{
+    width: 90%;
+    margin:0 auto;
 }
