--- a/css/sections/header.css
+++ b/css/sections/header.css
@@ -21,7 +21,7 @@ nav {
 }
 .nav__center ul li {
   list-style-type: none;
-  /* font-size: 1.5rem; */
+  font-size: 1.5rem;
 }
 .nav__center ul li a {
   padding: 1em;
