--- a/css/sections/header.css
+++ b/css/sections/header.css
@@ -105,11 +105,8 @@ hero{
   background-color: black;
   border-radius: 50%;
 }
-.menu h3 span{
+.menu h1 span{
 color:#eea534;
-}
-.menu ul{
-  display: flex;
 }
 .menu ul li{
   list-style-type: none;
@@ -122,6 +119,20 @@ color:#eea534;
   background-color: #eea534;
   color: white;
 }
-.menu__links{
+.menu__links ul {
+  display: flex;
   justify-content: space-around;
+}
+.menu__cart{
+  display: flex;
+  justify-content: space-evenly;
+}
+.menu__cart--left{
+  background-color: #f4f7fb;
+}
+.menu__cart--center{
+  background-color: #f4f7fb;
+}
+.menu__cart--right{
+  background-color: #f4f7fb;
 }
