--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,14 @@
 @import url("sections/header.css");
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-*{
-  font-family: "Kanit", sans-serif;
-
-}
+@import url("sections/menu.css");
+@import url("sections/whyus.css");
+@import url("sections/help.css");
+@import url("sections/footer.css");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Kanit", sans-serif;
 }
 .container{
     width: 90%;
