--- a/css/sections/header.css
+++ b/css/sections/header.css
@@ -46,9 +46,14 @@ hero{
 .hero__container{
   justify-content:space-between;
   display: flex;
+  font-weight: 600;
+}
+.hero__left{
+  font-size: large;
 }
 .hero__left p {
-  margin: 1em 0;
+  margin: 1em 0;;
+
   /* font-size: 1.5rem; */
 }
 .hero__left h1 span {
@@ -89,7 +94,12 @@ hero{
 }
 .hero__container .card__left--image{
   background-color: black;
+  height: 70px;
+  width: 70px;
   border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .hero__container .card__center{
 padding: 1em 2em;
@@ -97,7 +107,12 @@ padding: 1em 2em;
 }
 .hero__container .card__center--image{
   background-color: black;
+  height: 70px;
+  width: 70px;
   border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   }
 .hero__container .card__right{
   background-color: #f4f7fb;
@@ -106,7 +121,12 @@ padding: 1em 2em;
 }
 .hero__container .card__right--image{
   background-color: black;
+  height: 70px;
+  width: 70px;
   border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 
