--- a/css/sections/whyus.css
+++ b/css/sections/whyus.css
@@ -27,7 +27,12 @@ justify-content: space-between;
   }
   .whyus .card__up img{
     background-color: black;
+    height: 70px;
+    width: 70px;
     border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   .whyus .card__middle{
     display: flex;
@@ -36,8 +41,13 @@ justify-content: space-between;
 
   }
   .whyus .card__middle img{
+    background-color: black; 
+    height: 70px;
+    width: 70px;
     border-radius: 50%;
-    background-color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   .whyus .card__down{
     display: flex;
@@ -47,5 +57,10 @@ justify-content: space-between;
   }
   .whyus .card__down img{
     background-color: black;
+    height: 70px;
+    width: 70px;
     border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
