--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 @import url("sections/whyus.css");
 @import url("sections/help.css");
 @import url("sections/footer.css");
+@import url("sections/cart.css");
 * {
   margin: 0;
   padding: 0;
@@ -14,3 +15,10 @@
     width: 90%;
     margin:0 auto;
 }
+h1{
+  font-size: 3.5rem;
+}
+h2{
+  font-size: 3rem;
+}
+
