--- a/css/sections/help.css
+++ b/css/sections/help.css
@@ -17,10 +17,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    :last-child{
+}
+    .help .card__left:last-child{
         color: grey;
     }
-}
+
 .help .card__center{
     background-color: #f4f7fb;
     padding: 3em 5em;
@@ -28,11 +29,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    :last-child{
+}
+    .help .card__center:last-child{
         color: grey;
     }
 
-}
+
 .help .card__right{
     background-color: #f4f7fb;
     padding: 3em 5em;
