--- a/css/sections/menu.css
+++ b/css/sections/menu.css
@@ -1,4 +1,4 @@
-.menu__title{
+.menu__title {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -6,75 +6,80 @@
   font-size: large;
   font-weight: bold;
 }
-.menu h1 span{
-    color:#eea534;
-    }
-    .menu ul{
-      border-bottom: 3px solid grey;
-    }
-    .menu ul li{
-      list-style-type: none;
-      padding-bottom: 1em;
-    }
-    .menu ul li a{
-      text-decoration: none;
-      color:black;
-      
-      font-size: 2em;
-      font-weight:500;
-    }
-    .menu ul li a:hover{
-      border-bottom:4px solid #eea534;
-      color: #eea534;
-  
-    }
-    .menu__links ul {
-      display: flex;
-      justify-content: space-between;
-    }
-    .menu__cart{
-      display: flex;
-      justify-content: space-between;
-    }
-    .menu__cart--left{
-      background-color: #f4f7fb;
-    }
-    .menu__cart--left button{
-background-color: black;
-color: white;
-padding:1em 2em;
-border:none ;
-
-
-    }
-
-    .menu__cart--center{
-      background-color: #f4f7fb;
-    }
-    .menu__cart--center button{
-      background-color: black;
-color: white;
-padding:1em 2em;
-border:none ;
-
-    }
-    .menu__cart--right button{
-
-    background-color: black;
-    color: white;
-    padding:1em 2em;
-  border:none ;
+.menu h2 span {
+  color: #eea534;
 }
-    .menu__cart--right{
-      background-color: #f4f7fb;
-    }
-    .view{
-  background-color:#eea534;
+
+.menu__links ul{
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 3px solid gray;
+  line-height: 1;
+  padding: 1em;
+  margin-bottom: 1em;
+}
+
+.menu__links ul li a{
+  color: #000;
+  padding: 0.6em;
+}
+
+.menu__links ul li a:hover{
+  color: #eea534;
+  border-bottom: 3px solid #eea534;
+}
+
+.menu__cart {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 2em;
+}
+.menu__cart--left {
+  background-color: #f4f7fb;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.menu__cart--left button {
+  background-color: black;
   color: white;
-  padding: 2em 4em;
+  padding: 1em 2em;
   border: none;
-  text-align: center;
-  text-align: center;
-  
-    }
-    
+}
+
+.menu__cart--center {
+  background-color: #f4f7fb;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.menu__cart--center button {
+  background-color: black;
+  color: white;
+  padding: 1em 2em;
+  border: none;
+}
+.menu__cart--right button {
+  background-color: black;
+  color: white;
+  padding: 1em 2em;
+  border: none;
+}
+.menu__cart--right {
+  background-color: #f4f7fb;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.view {
+display:block;
+margin: 0 auto;
+background-color: #eea534;
+border: none;
+padding: 1em 3em;
+border-radius: 5px;
+marg
+}
